ui: Fix alignment of input in seach bar

--- a/weblate/static/style-bootstrap.css
+++ b/weblate/static/style-bootstrap.css
@@ -1792,3 +1792,6 @@ a.language:hover {
   top: 0;
   background-color: white;
 }
+.input-group > .form-control {
+  height: 37px;
+}
